manifests/showks-portal-frontend/manifest.yaml
---
# Source: showks-portal-frontend/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: showks-portal-frontend
  namespace: showks
  labels:
    app: showks-portal-frontend
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: app-port
  selector:
    app: showks-portal-frontend

---
# Source: showks-portal-frontend/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: showks-portal-frontend
  namespace: showks
  labels:
    app: showks-portal-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: showks-portal-frontend
  template:
    metadata:
      labels:
        app: showks-portal-frontend
    spec:
      containers:
        - name: showks-portal-frontend
          image: gcr.io/ipc-containerdays/showks-portal-frontend:prod-9a39a6305e2ed1550904d1a21f837b5a97735b96
          ports:
            - name: app-port
              containerPort: 3000
              protocol: TCP
