manifests/showks-portal-frontend/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: showks-portal-frontend-temp
  namespace: showks
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "20"
    nginx.org/ssl-services: "showks-portal-frontend-temp"
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
    tls:
      - hosts:
        - portal.prod.showks.containerdays.jp
        secretName: tls-certificate
  - host: portal.prod.showks.containerdays.jp
    http:
      paths:
      - path: /
        backend:
          serviceName: showks-portal-frontend-temp
          servicePort: 3000

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: showks-portal-frontend
  namespace: showks
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/ssl-services: "showks-portal-frontend"
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
    tls:
      - hosts:
        - portal.prod.showks.containerdays.jp
        secretName: tls-certificate
  - host: portal.prod.showks.containerdays.jp
    http:
      paths:
      - path: /
        backend:
          serviceName: showks-portal-frontend
          servicePort: 3000
